crates/knok/tests/ui/unknown_graph.stderr
error: unknown graph call `missing_graph`; graph calls must refer to earlier #[knok::graph] functions
 --> tests/ui/unknown_graph.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/unknown_graph.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
